<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20sp"
    tools:context=".change_password">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tajawalbold"
            android:letterSpacing="0.15"
            android:textAlignment="center"

            android:text="@string/app_name"
            android:textColor="@color/buttonText"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"

        >
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/light"
        android:paddingTop="20sp"
        android:inputType="text"
        android:hint="@string/old_password"
        android:textColor="@color/primaryText" />
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20sp"
            android:fontFamily="@font/light"
            android:textColor="@color/primaryText"
            android:hint="@string/new_password"
            android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:id="@+id/update"
        android:background="@drawable/button_shape"
        android:textColor="@color/buttonText"/>


</LinearLayout>